<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/like"
        android:title="@string/menu_like"
        android:icon="@drawable/ic_star_border_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/switch_read_mode"
        android:title="@string/online_mode"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/report"
        android:title="@string/menu_report"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/big_text"
        android:title="@string/big_size"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/small_text"
        android:title="@string/small_size"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/open_in_browser"
        android:title="@string/menu_open_in_browser"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/copy_link"
        android:title="@string/menu_copy_link"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/share_picture"
        android:title="@string/share_with_picture"
        app:showAsAction="collapseActionView"/>


</menu>