<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">
    <TextView
        android:id="@+id/tv_copyright_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_notice_1"/>
    <TextView
        android:id="@+id/tv_copyright_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_notice_2"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tv_copyright_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_notice_3"
        android:layout_marginTop="8dp" />

</LinearLayout>