<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.free.scp.view.home.LibraryFragment"
    android:background="?attr/containerBg">

    <TextView
        android:id="@+id/tv_joke_doc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/img_dark_logo"
        android:gravity="center"
        android:text="@string/title_joke_scp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintBottom_toTopOf="@+id/tv_more_about"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_settings_doc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_settings_doc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/img_break_logo_2"
        android:gravity="center"
        android:text="@string/title_scp_settings"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintBottom_toTopOf="@+id/tvEssayContest"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_joke_doc"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_more_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="42dp"
        android:background="@drawable/img_empty_logo"
        android:gravity="center"
        android:text="@string/title_more_about"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintBottom_toTopOf="@+id/tvEventRecord"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tvEssayContest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_joke_doc" />

    <TextView
        android:id="@+id/tvEssayContest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/img_multi_logo"
        android:gravity="center"
        android:text="@string/title_scp_essay"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintBottom_toTopOf="@+id/tvMore"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_more_about"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_doc" />

    <TextView
        android:id="@+id/tvEventRecord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/img_more_logo"
        android:gravity="center"
        android:text="@string/title_scp_event"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tvMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_more_about" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/title_more_function"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/darkText"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEventRecord"
        app:layout_constraintTop_toBottomOf="@id/tvEssayContest" />

</android.support.constraint.ConstraintLayout>
